- fix events/viewpoints state
git-svn-id: http://svn.xp-framework.net/xpforge/trunk/projects/www/uska@11002 d2cacbed-c0f6-0310-851a-9dad52fc623a

--- a/doc_root/styles/main.css
+++ b/doc_root/styles/main.css
@@ -260,6 +260,9 @@ html>body #content_container {
 	font-size: 90%;
 }
 
+#content_container .tablenumber {
+    text-align: right;
+}
 
 /*--- container for the search form ----------------------------------------*/
 
